# timor-python

./: .flake8  .gitignore  .gitlab-ci.yml  .log_conf.sample  .pre-commit-config.yaml  .pydocstyle  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.py  timor.config.sample  timor.unittest_config
.gitlab/issue_templates/: enhancement.md  issue.md
ci/coverage/html/: README.md
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/_autoapi_templates/: index.rst
src/: .coveragerc
src/timor/: Bodies.py  Geometry.py  Joints.py  Module.py  Robot.py  Volume.py  __init__.py  parameterized.py
src/timor/ci/coverage/: report.coverage.VogonFlagship.102779.323074
src/timor/configuration_search/: AssemblyFilter.py  AssemblyIterator.py  GA.py  LiuIterator.py
src/timor/scenario/: Constraints.py  CostFunctions.py  Goals.py  Obstacle.py  Scenario.py  Solution.py  Tolerance.py
src/timor/task/: Constraints.py  CostFunctions.py  Goals.py  Obstacle.py  Solution.py  Task.py  Tolerance.py
src/timor/utilities/: __init__.py  asset_handling.py  callbacks.py  configurations.py  crok_formatting.py  download_data.py  dtypes.py  errors.py  file_locations.py  frames.py  ik_cpp.cpp  json_serialization_formatting.py  jsonable.py  logging.py  module_classification.py  prebuilt_robots.py  rtb_trajectory.py  schema.py  spatial.py  tolerated_pose.py  trajectory.py  transformation.py  visualization.py  write_urdf.py
src/timor_sample_robots/IMPROV/: modules.json
src/timor_sample_robots/IMPROV/STLfiles/: L1.stl  L10.stl  L11.stl  L2.stl  L3.stl  L8.stl  L9.stl
src/timor_sample_robots/geometric_primitive_modules/: modules.json
src/timor_sample_robots/panda/urdf/: panda.urdf
tests/: pytest.ini  test_assembly.py  test_assembly_filters.py  test_assembly_iterator.py  test_bodies_geometries.py  test_collisions.py  test_constraints.py  test_custom_types.py  test_frames.py  test_ga.py  test_ik_cpp.py  test_imports.py  test_logging.py  test_module.py  test_modulesDB.py  test_obstacle.py  test_robot_setup.py  test_schemas.py  test_serializing_deserializing.py  test_spatial_projections.py  test_task_solutions.py  test_tolerances.py  test_trajectory.py  test_transformations.py  test_tutorials.py  test_volume.py
tests/data/sample_tasks/assets/: DMU_125P_compress.stl  IWB Hermle UWF 900_only.ply  QUASER_MV205_v3.stl  QUASER_MV205_v3_compressed.stl  aircraftWindowFrame.stl
tests/data/sample_tasks/fhi_tasks/: drilling_crok_description.json
tests/data/sample_tasks/simple/: Empty.json  PTP_1.json  PTP_2.json  PTP_2_cycle.json  PTP_3.json  PTP_leave.json  PTP_mixed_frames.json  PTP_pause.json  traj_1.json  traj_window.json
tests/data/schemas/: ModuleSchema.json  PoseSchema.json  SolutionSchema.json  TaskSchema.json
tests/sample_scenarios/simple/: Empty.json  PTP_1.json  PTP_2.json  PTP_2_cycle.json  PTP_3.json  PTP_leave.json  PTP_pause.json  traj_1.json  traj_window.json
tests/sample_scenarios/simple/negSolution/: PTP_1_at.json  PTP_1_reachdq.json  PTP_1_reachq.json  PTP_1_selfColl.json  PTP_1_validAssembly.json  PTP_1_validB.json  PTP_2_collision.json  PTP_2_cycle_q.json  PTP_2_dq.json  PTP_2_q.json  PTP_2_tau.json  PTP_leave.json  PTP_pause.json  traj_1.json
tests/sample_scenarios/simple/solution/: Empty_DualMotorStrutNinety_Traj_cyc.json  Empty_DualMotorStrutNinety_Traj_mechEnergy.json  Empty_DualMotorStrutNinety_Traj_qDist.json  Empty_DualMotorStrutNinety_grav_effort.json  Empty_DualMotorStrutNinety_velocity_effort.json  Empty_DualMotorStrut_Traj_cyc.json  Empty_DualMotorStrut_Traj_mechEnergy.json  Empty_DualMotorStrut_Traj_qDist.json  Empty_DualMotorStrut_grav_effort.json  Empty_DualMotorStrut_velocity_effort.json  Empty_SingleMotorStrut_Traj_cyc.json  Empty_SingleMotorStrut_Traj_mechEnergy.json  Empty_SingleMotorStrut_Traj_qDist.json  Empty_SingleMotorStrut_grav_effort.json  Empty_SingleMotorStrut_velocity_effort.json  Empty_SingleMotor_Traj_cyc.json  Empty_SingleMotor_Traj_mechEnergy.json  Empty_SingleMotor_Traj_qDist.json  Empty_SingleMotor_grav_effort.json  Empty_SingleMotor_velocity_effort.json  PTP_1.json  PTP_1_1.json  PTP_1_2.json  PTP_2_1.json  PTP_2_cycle.json  PTP_3_Kuka.json  PTP_3_ModRobV1.json  PTP_leave.json  (+4 more)
tutorials/: TrajectoryPlanner.py  animate_a_trajectory.ipynb  assembly2stl.ipynb  assembly_to_stl.py  create_some_modules.ipynb  experiment_one.ipynb  experiment_two.ipynb  hello_world.ipynb  improv_iterator.py  lexicographic_ga.ipynb  parameterized.ipynb  solve_a_task.ipynb  visualize_multiple_robots.ipynb
user_study/: .gitignore  README.md  README.rst  brute_force_solution.py  common.py  ga_optimize.py  ga_solution.py  user_study.py  user_study_task.json
user_study/optuna_hp_optimization_results/: hp_optim.pkl  optimization_logfile.txt
(+74 files in other folders)
