[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timor-python"
description = "Toolbox for Industrial Modular Robots"
authors = [{ name = "Jonathan Kuelz", email = "jonathan.kuelz@tum.de" }]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only"
]
keywords = ["Modular Reconfigurable Robots", "Robot Design", "Model Generation", "Simulation"]
dependencies = [
    "jsonschema >= 4.10",
    "pin > 2.6.12",
    "matplotlib >= 3.5.1",
    "meshcat",
    "networkx >= 2.6.3",
    "numpy >= 1.21.0",
    "roboticstoolbox-python >= 0.11.0",
    "scipy >= 1.6",
    "requests >= 2.28.1"
]
requires-python = ">=3.8"
dynamic = ["version", "readme"]

[project.optional-dependencies]
dev = ["flake8>=5.0", "coverage>=6.3", "pre-commit", "pip-tools", "pytest>=6.0", "setuptools>=61.0.0"]
optimization = ["pygad>=2.18.0", "optuna>=3.1", "plotly", "scikit-learn"]
full = ["flake8>=5.0", "coverage>=6.3", "pre-commit", "pip-tools", "pytest>=6.0", "setuptools>=61.0.0", "jupyterlab", "trimesh >= 3.18", "tqdm"]

[tool.setuptools.dynamic]
readme = {file = "README.rst"}
version = {attr = "timor.__version__"}

[project.urls]
"Source Code" = "https://gitlab.lrz.de/tum-cps/timor-python"
"Documentation" = "https://timor-python.readthedocs.io/en/latest/"
"Bug Tracker" = "https://gitlab.lrz.de/tum-cps/timor-python/-/issues"
