[build-system]
requires = ["setuptools>=61.0.0", "wheel", "pybind11", "pybind11-stubgen", "pin<3.0", "cmeel-eigen", "cmeel<0.54.0"]
build-backend = "setuptools.build_meta"

[project]
name = "timor-python"
description = "Toolbox for Industrial Modular Robots"
authors = [{ name = "Jonathan Kuelz", email = "jonathan.kuelz@tum.de" }]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only"
]
keywords = ["Modular Reconfigurable Robots", "Robot Design", "Model Generation", "Simulation"]
dependencies = [
    "cmeel-eigen >= 3.4",
    "jsonschema >= 4.10",
    "pin > 2.6.12, < 3.0",
    "pygad >= 3.0.0",
    "matplotlib >= 3.5.1",
    "meshcat",
    "networkx >= 2.6.3",
    "numpy >= 1.21.0",
    "scipy >= 1.6",
    "requests >= 2.28.1",
    "pybind11 >= 2.10.0",
    "pybind11-stubgen >= 0.13.0",
    "setuptools",
    "cobra-io >= 0.0.7"
]
requires-python = ">=3.8"
dynamic = ["version", "readme"]

[project.optional-dependencies]
dev = ["coverage>=6.3", "flake8>=5.0", "ipykernel", "nbclient", "nbformat", "nbconvert", "pre-commit", "pip-tools", "pytest>=6.0", "setuptools>=61.0.0", "tqdm>=4.0"]
optimization = ["optuna>=3.1", "optuna-dashboard>=0.10", "plotly", "scikit-learn", "wandb>=0.15"]
full = ["timor-python[dev]", "timor-python[optimization]", "jupyterlab", "trimesh >= 4.3.0"]

[tool.setuptools.dynamic]
readme = {file = "README.rst"}
version = {attr = "timor.__version__"}

[project.urls]
"Source Code" = "https://gitlab.lrz.de/tum-cps/timor-python"
"Documentation" = "https://timor-python.readthedocs.io/en/latest/"
"Bug Tracker" = "https://gitlab.lrz.de/tum-cps/timor-python/-/issues"
